# vldemo-talent-screening

./: .gitattributes  .gitignore  NOTICE  README.md  compliance_eval.py  dvc.yaml  evaluate.py  froga.yaml  metrics.json  model.pkl  params.yaml  pyproject.toml  train.py
.froga/: PUBKEY.txt  bundle.json  bundle.json.sig  reconstruct.json  reconstruct.json.sig
.froga/conformance/: eu_pren-18228_2026.json  eu_pren-18228_2026.json.sig  eu_pren-18282_2026.json.sig  eu_pren-18283_2026.json  eu_pren-18283_2026.json.sig  iso_23894_2023.json.sig
.venth/: PUBKEY.txt  bundle.json  bundle.json.sig  reconstruct.json  reconstruct.json.sig
.venth/conformance/: eu_pren-18228_2026.json.sig  eu_pren-18282_2026.json  eu_pren-18282_2026.json.sig  eu_pren-18283_2026.json.sig  iso_23894_2023.json  iso_23894_2023.json.sig
.venturalitica/: bom.json
data/: campus.croissant.json
shared_data/policies/: assessment_plan.oscal.yaml
