[project]
name = "vldemo-talent-screening"
version = "0"
requires-python = ">=3.11"
dependencies = [
  "dvc>=3",
  "pyyaml",
  "froga",
  "venturalitica==0.6.11",
  "mlcroissant>=1.0",
  "pyarrow",
  "scikit-learn",
  "pandas",
  "joblib",
]

[tool.uv]
find-links = ["https://sei-releases.s3.fr-par.scw.cloud/simple/froga/index.html"]
